src/style.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}

/* HTML5 display-role reset for older browsers */
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
	display: block;
}

body {
	line-height: 1;
}

ol,
ul {
	list-style: none;
}

blockquote,
q {
	quotes: none;
}

blockquote:before,
blockquote:after,
q:before,
q:after {
	content: '';
	content: none;
}

table {
	border-collapse: collapse;
	border-spacing: 0;
}




:root {
	/* colors */
	/* background-or-something */
	--dark: #2e3440;
	--darkMain-Sb: #3b4252;
	--dark2: #434c5e;
	--dar2Main-Sb: #4c566a;

	/* text */
	--text: #d8dee9;
	--text2: #e5e9f0;
	--text3: #eceff4;

	/* frost */
	--frost: #8fbcbb;
	--frost-2: #88c0d0;
	--frost-3: #5e81ac;
	--frost-4: #81a1c1;

	/* highlights */
	--highlight-red: #bf616a;
	--highlight-orange: #d08770;
	--highlight-yellow: #ebcb8b;
	--highlight-green: #a3be8c;
	--highlight-red: #b48ead;

	/* icons */
	--icon-width: 30px;
	--icon-heigth: 30px;

	--sb-ic-width: 25px;
	--sb-ic-height: 25px
}

/* @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700;900&display=swap'); */
@import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@400;500;600;700&display=swap');

/* Montserrat */
@font-face {
	font-family: "Montserrat-Bold";
	src: url("./resources/fonts/Montserrat-Bold.woff2") format("woff2");
}

@font-face {
	font-family: "Montserrat-Reg";
	src: url("./resources/fonts/Montserrat-Regular.woff2") format("woff2");
}

@font-face {
	font-family: "Montserrat-Med";
	src: url("./resources/fonts/Montserrat-Medium.woff2") format("woff2");
}

@font-face {
	font-family: "Montserrat-Light";
	src: url("./resources/fonts/Montserrat-ExtraLight.woff2") format("woff2");
}

/* Montserrat Alternative */

@font-face {
	font-family: "Montserrat-alt-Reg";
	src: url("./resources/fonts/MontserratAlternates-Regular.woff2") format("woff2");
}

@font-face {
	font-family: "Montserrat-alt-Bold";
	src: url("./resources/fonts/MontserratAlternates-Bold.woff2") format("woff2");
}

@font-face {
	font-family: "Montserrat-alt-Med";
	src: url("./resources/fonts/MontserratAlternates-Medium.woff2") format("woff2");
}

body,
html {
	overflow: hidden;
	height: 100vh;

}

header{
	z-index: 999;
}
.nav-container {
	display: flex;
	justify-content: space-between;
	align-items: center;
	padding: .5em 3em;
}

ul.right-nav {
	display: flex;
	gap: 2em;
}


#user-profile,
#hamburger-menu,
#settings {
	width: var(--icon-width);
	height: var(--icon-height);
	filter: invert(93%) sepia(11%) saturate(221%) hue-rotate(185deg) brightness(94%) contrast(93%);
	padding: 1px;
}

#hamburger-menu{
	padding: .1em .3em;
	transition: all 100ms ease;
}
#hamburger-menu:hover{
	background-color: var(--text2);
	border-radius: 2px;
	padding: .1em .3em;
	filter: none;
}


#settings {
	border-bottom: var(--highlight-green) 3px solid;
	border-radius: 20px;

}

#user-profile {
	border-bottom: var(--highlight-red) 3px solid;
	border-radius: 20px;
}

header {
	background-color: var(--dark);
}

#logo {
	font-weight: 400;
	font-size: 1.5rem;
	font-family: 'Montserrat-Bold';
}

a {
	text-decoration: none;
	color: var(--text);
}

#sb-main-container {
	display: flex;
	background-color: var(--dark2);
	height: 100%;
}

#sidebar-container{
	box-shadow: 2px 0px 13px rgb(0, 0, 0,.3);
	
}
/* contents aligned with burger menu */

/* fade text */
.sidebar-active {
	padding: 4em .5em 0em 0em;
	text-align: start;
	width: 15%;
	background-color: var(--darkMain-Sb);
	transition: width 200ms ease;
}

.sidebar-inactive {
	transition: 200ms ease;
	width: 0%;
}
@keyframes fade-sidebar-content {
	/* 0%   {
		opacity: 0;
		transform: translateX(-80%);
	} */
	0%   {
		opacity: 0;
		transform: translateX(-80%);
	}
	50%{
		opacity: 0.6;
		transform: translateX(0%);
	}
	100% {
		opacity: 1;
		transform: translateX(0%);
	}
}

.sidebar {
	animation: 2s fade-sidebar-content ease-out;
	animation-duration: 200ms;
	display: flex;
	gap: 15px;
	justify-content: center;
	flex-direction: column;
	font-family: "Montserrat-Med";
	padding-left: 3em;
	padding-right: .3em;
}

:root {
	/* convinience purposes */
	--sidebar-list-padding: .5em;
}
/* sb-list styles */

.sidebar>li {
	padding: var(--sidebar-list-padding);
	display: flex;
	align-items: center;
	gap: .3em;
	font-size: .9rem;
	color: var(--text3);
	white-space: nowrap;
}

.sidebar>li:hover {
	box-sizing: border-box;
	background-color: var(--dar2Main-Sb);
	border-radius: 4px;
	padding: var(--sidebar-list-padding);
}
.sidebar>li,
#hamburger-menu,
#settings,
#user-profile,
#logo {
	cursor: pointer;
}


li>.tab-icon {
	width: var(--sb-ic-width);
	height: var(--sb-ic-heighth);
	image-rendering: auto;
}

.projects-icon {
	filter: invert(77%) sepia(25%) saturate(362%) hue-rotate(49deg) brightness(90%) contrast(90%);
}

.td-task-icon {
	filter: invert(63%) sepia(18%) saturate(946%) hue-rotate(328deg) brightness(92%) contrast(89%);
}

.up-task-icon {
	filter: invert(67%) sepia(14%) saturate(590%) hue-rotate(259deg) brightness(88%) contrast(90%);


}

